Fixed blockquote text alignment

--- a/src/_0_styles/custom-styles.scss
+++ b/src/_0_styles/custom-styles.scss
@@ -135,6 +135,7 @@ footer {
 
 	blockquote {
 		margin: 50px 0;
+		padding: 1.5em;
 		text-align: center;
 		&:before {
 			display: none;
